<resources>
    <string name="app_name">ShallWeTalk</string>
    <string name="packageName">com.moirai.client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">ShallWeTalk</string>
    <string name="title_activity_talk">Talk</string>
    <string name="title_activity_friend">Friends</string>
    <string name="title_activity_moments">Share</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_gesture">Gesture</string>
    <string name="send_moments">Send Moments</string>
    <string name="tab_chat">Chats</string>
    <string name="tab_friend">Friends</string>
    <string name="tab_share">Shares</string>

    <string name="register_id">ID</string>
    <string name="register_password">Password</string>
    <string name="register_start">Welcome,Please follow the voice to create an account</string>
    <string name="tip_enter_id">Enter ID</string>
    <string name="tip_enter_pw1">Enter password</string>
    <string name="tip_enter_pw2">password again</string>
    <string name="voice_enter_id">Please enter user name</string>
    <string name="voice_enter_pw1">Please enter your password</string>
    <string name="voice_enter_pw2">Please enter your password again</string>
    <string-array name="register_type">
        <item>normal</item>
        <item>blind</item>
        <item>Deaf-Muck</item>
    </string-array>
    <string name="tip_register_successfully">Registered successfully</string>
    <string name="tip_register_failed">Registered failed</string>
    <string name="tip_register_id">Please enter user name correctly</string>
    <string name="tip_regieter_pw_null">Please enter password correctly</string>
    <string name="register_btn">Sign Up</string>
    <string name="register_goto_login">Go to login</string>

    <string name="title_activity_shake">Shake</string>
    <string name="message1_shake_confirm">Do you want to add</string>
    <string name="message2_shake_confirm">to be your friend ?</string>
    <string name="message3_shake_confirm">double Click as yes or long click as cancel</string>
    <string name="yes_shake_confirm">Yes</string>
    <string name="no_shake_confirm">No</string>
    <string name="no_shake_friend_tip">No friend</string>
    <string name="voice_shake_tip">Please shake your phone</string>
    <string name="voice_shake_result_success">Successful add friend</string>
    <string name="voice_shake_result_cancel">Cancel add friend</string>

    <string name="tip_gesture_textView">Click return</string>
	
	<string name="reminder">Choose voice reminder?</string>
    <string name="choice1">YES</string>
    <string name="choice2">NO</string>
    <string name="takePhoto">Start</string>
    <string name="loading">"Do you want to use the voice service?YES,click the screen.No,long press the screen"</string>
	<!--Login function-->
    <string name="login">Login</string>
    <string name="loginStart">Welcome to login,Click once to input username,Long Click to retrieve to Register</string>
    <string name="login_ReToRegister">Retrieve to Register</string>
    <string name="username">Please tell us the username</string>
    <string name="password">Please tell us the password</string>
    <string name="confirm">the username and password you input are</string>
    <string name="login_success">Login successfully</string>
    <string name="login_failure">username or password is wrong.Input again</string>
    <!--mainActivity-->
    <string name="main_mainPage">Welcome to main Page</string>
    <string name="main_contactPage">Welcome to contact Page</string>
    <string name="main_sharePage">Welcome to share Page</string>
    <string name="main_welcome">Welcome to the home page</string>
    <string name="main_chats_tip">sends your a message,and the content is :</string>
    <string name="main_content1">you are amazing</string>
    <string name="main_content2">Have you finished your breakfast</string>
    <string name="main_content3">What are you doing now?</string>
    <string name="main_date1">2015-03-29 16:44</string>
    <string name="main_date2">2015-03-29 16:44</string>
    <string name="main_date3">2015-03-29 16:44</string>
    <string name="main_title1">emma</string>
    <string name="main_title2">fish</string>
    <string name="main_title3">brian</string>
    <string name="noNewMessage">There is no new message</string>
    <string name="main_contact1">Bright</string>
    <string name="main_contact2">Emma</string>
    <string name="main_contact3">Fish</string>

    <string name="main_share_tip">posted moment :</string>
    <string name="main_share1">I am crazy now</string>
    <string name="main_share2">I am sleepy now</string>
    <string name="main_share3">I am happy now</string>

    <string name="talk_send_message">Send</string>
    <string name="talking_with">Talking with</string>
    <string name="ack_talk_start">Welcome,you are talking</string>
    <string name="talk_have_Info">No message now,</string>
    <string name="setting">Please choose your type</string>
    <string name="type_choice">TYPE</string>
    <string name="type_choice0">0-normal</string>
    <string name="type_choice1">1-unable to see and use voice</string>
    <string name="type_choice2">2-able to see,but use sign language</string>
    <string name="setting_welcome">Welcome to setting:if you are normal,please click one,
        if you need use voice interaction,please double click
        if you need use sign language,please Long click</string>
    <string name="setting_choice0">set successfully!Now you are the role:Normal</string>
    <string name="setting_choice1">set successfully!Now you are the role:unable to see and use voice interaction </string>
    <string name="setting_choice2">set successfully!Now you are the role:able to see and use sign language</string>
    <string name="welcome_back">welcome back</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_share">Add</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_send_moment">SendMomentActivity</string>
</resources>
