<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_background"
    tools:context="com.moirai.view.RegisterActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:background="#00ff00"
        android:id="@+id/register_jBlindView"/>

    <RelativeLayout
        android:layout_below="@+id/register_jBlindView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <EditText
            android:id="@+id/register_id_EditView"
            android:background="@mipmap/register_id"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:hint="@string/tip_enter_id"
            android:layout_above="@+id/register_password1_EditView"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/register_password1_EditView"
            android:background="@mipmap/register_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:hint="@string/tip_enter_pw1"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/register_id_EditView"
            android:layout_alignStart="@+id/register_id_EditView"
            android:layout_alignRight="@+id/register_id_EditView"/>

        <EditText
            android:id="@+id/register_password2_EditView"
            android:background="@mipmap/register_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:hint="@string/tip_enter_pw2"
            android:inputType="textPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register_password1_EditView"
            android:layout_alignLeft="@+id/register_id_EditView"
            android:layout_alignStart="@+id/register_id_EditView"
            android:layout_alignRight="@+id/register_id_EditView"
            />

        </RelativeLayout>

        <Button
            android:id="@+id/register_createButton"
            android:background="@mipmap/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/register_btn"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:layout_below="@+id/register_jBlindView"
            android:layout_marginBottom="50dp"/>

</RelativeLayout>
