<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/blindView" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:id="@+id/fragmentContainer"
        android:paddingBottom="@dimen/activity_vertical_margin" >
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <FrameLayout
            android:id="@+id/tab_content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:background="@android:color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#9F9F9F"/>
        <RadioGroup
            android:id="@+id/tabs_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            >
            <RadioButton
                android:id="@+id/tab_rb_a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_tabchat"
                android:button="@null"
                android:text="@string/tab_chat"
                android:textColor="#000000"
                android:textSize="13sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:singleLine="true"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/tab_rb_b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_tabfriend"
                android:button="@null"
                android:text="@string/tab_friend"
                android:textColor="#000000"
                android:textSize="13sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:singleLine="true"
                />
            <RadioButton
                android:id="@+id/tab_rb_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_tabshare"
                android:button="@null"
                android:text="@string/tab_share"
                android:textColor="#000000"
                android:textSize="13sp"
                android:layout_weight="1.0"
                android:gravity="center"
                android:singleLine="true"
                />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>